# appearance

./: .gitignore  Cargo.toml  README.md  shadertoolsconfig.json
apps/example/: Cargo.toml
apps/example/src/: lib.rs  main.rs
apps/render-host/: Cargo.toml  build.rs
apps/render-host/src/: lib.rs  main.rs
apps/render-node/: Cargo.toml
apps/render-node/src/: lib.rs  main.rs
assets/: CornellBoxConor.glb  EmissivePlane.glb  GlassPanel.glb  SponzaNeon.glb  SponzaNeon2.glb  SponzaOrb.glb  SponzaOrbs.glb
assets/shaders/: color.wgsl  math.wgsl  packing.wgsl  random.wgsl  tangent_space_trig_helpers.wgsl  triangle.wgsl
crates/appearance/: Cargo.toml
crates/appearance-asset-database/: Cargo.toml
crates/appearance-asset-database/src/: asset_paths.rs  lib.rs
crates/appearance-build/: Cargo.toml
crates/appearance-build/src/: lib.rs  shader_resolve.rs
crates/appearance-camera/: Cargo.toml
crates/appearance-camera/src/: frustum.rs  lib.rs
crates/appearance-distributed-renderer/: Cargo.toml
crates/appearance-distributed-renderer/src/: lib.rs
crates/appearance-input/: Cargo.toml
crates/appearance-input/src/: lib.rs
crates/appearance-model/: Cargo.toml
crates/appearance-model/src/: asset.rs  lib.rs  material.rs  mesh.rs
crates/appearance-packing/: Cargo.toml
crates/appearance-packing/src/: lib.rs
crates/appearance-path-tracer/: Cargo.toml  build.rs
crates/appearance-path-tracer-gpu/: Cargo.toml
crates/appearance-path-tracer-gpu/assets/shaders/: apply_di.wgsl  apply_gi.wgsl  demodulate_radiance.wgsl  firefly_filter.wgsl  gbuffer.wgsl  ray.hlsl  ray.wgsl  raygen.cs.hlsl  raygen.wgsl  resolve.cs.hlsl  resolve.wgsl  restir_di_spatial.wgsl  restir_di_temporal.wgsl  restir_gi_spatial.wgsl  restir_gi_temporal.wgsl  svgf_atrous.wgsl  svgf_temporal.wgsl  taa.wgsl  trace.cs.hlsl  trace.wgsl  vertex_pool_bindings.wgsl
crates/appearance-path-tracer-gpu/assets/shaders/helpers/: inline_path_tracer.wgsl  nee.wgsl  trace.wgsl
crates/appearance-path-tracer-gpu/assets/shaders/shared/: diffuse_brdf.wgsl  disney_bsdf.wgsl  gbuffer.wgsl  gbuffer_bindings.wgsl  ggxmdf.wgsl  light_sample.wgsl  material_pool.wgsl  material_pool_bindings.wgsl  nee.wgsl  ray.wgsl  reservoir.wgsl  sampling.wgsl  sky_bindings.wgsl  trace_helpers.wgsl  vertex_pool.wgsl  vertex_pool_bindings.wgsl
crates/appearance-path-tracer-gpu/assets/shaders/shared/material/: bsdf.wgsl  diffuse_brdf.wgsl  disney_bsdf.wgsl  material_pool_bindings.wgsl
crates/appearance-path-tracer-gpu/assets/shaders/shared/restir/: di_reservoir.wgsl  gi_reservoir.wgsl
crates/appearance-path-tracer-gpu/assets/shaders/shared/restir_di/: di_reservoir.wgsl
crates/appearance-path-tracer-gpu/src/: apply_di_pass.rs  apply_gi_pass.rs  demodulate_radiance.rs  film.rs  firefly_filter_pass.rs  gbuffer.rs  gbuffer_pass.rs  lib.rs  raygen_pass.rs  resolve_pass.rs  restir_di_pass.rs  restir_gi_pass.rs  scene_resources.rs  svgf_pass.rs  taa_pass.rs  trace_pass.rs
crates/appearance-path-tracer-gpu/src/scene_resources/: material_pool.rs  mod.rs  scene_model.rs  sky.rs  vertex_pool.rs
crates/appearance-path-tracer/src/: geometry_resources.rs  lib.rs  path_integrator.rs  path_tracer.rs
crates/appearance-path-tracer/src/camera_model/: film.rs  mod.rs  perspective.rs  pixel_sensor.rs
crates/appearance-path-tracer/src/camera_model/data_tables/: mod.rs
crates/appearance-path-tracer/src/light_sources/: distant_light.rs  infinite_light.rs  mod.rs  point_light.rs  uniform_light_sampler.rs
crates/appearance-path-tracer/src/math/: coord_system.rs  glam_extensions.rs  interaction.rs  lookup_table.rs  mod.rs  normal.rs  random.rs  sobol.rs  spherical_geometry.rs  vec_extensions.rs
crates/appearance-path-tracer/src/radiometry/: color.rs  data_tables.rs  mod.rs  spectrum.rs
crates/appearance-path-tracer/src/radiometry/data_tables/: camera.rs  cie.rs  materials.rs  mod.rs  rgb_color_space.rs  swatch_reflectances.rs
crates/appearance-path-tracer/src/reflectance/: bxdf.rs  conductor.rs  dielectric.rs  diffuse.rs  microfacet.rs  mod.rs
crates/appearance-path-tracer/src/sampling/: filter.rs  independent_sampler.rs  mod.rs  piecewise_constant.rs  zsobol_sampler.rs
crates/appearance-profiling/: Cargo.toml
crates/appearance-profiling/src/: lib.rs
crates/appearance-render-loop/: Cargo.toml
crates/appearance-render-loop/assets/shaders/: block.wgsl  block_to_linear.wgsl
crates/appearance-render-loop/assets/shaders/appearance-render-loop/: block.hlsl
crates/appearance-render-loop/src/: _host.rs  _node.rs  block_to_linear_pass.rs  host.rs  lib.rs  node.rs
crates/appearance-texture/: Cargo.toml
crates/appearance-texture/src/: asset.rs  lib.rs
crates/appearance-time/: Cargo.toml
crates/appearance-time/src/: timer.rs
crates/appearance-transform/: Cargo.toml
crates/appearance-transform/src/: lib.rs
crates/appearance-wgpu/: Cargo.toml
crates/appearance-wgpu/assets/shaders/: blit.fs.hlsl  blit.vs.hlsl  texture_to_buffer.wgsl
crates/appearance-wgpu/assets/shaders/appearance-wgpu/: bindless.hlsl
crates/appearance-wgpu/src/: bindless.rs  lib.rs  pipeline_database.rs
crates/appearance-wgpu/src/helper_passes/: blit_pass.rs  mod.rs  texture_to_buffer_pass.rs
crates/appearance-world/: Cargo.toml
crates/appearance-world/src/: lib.rs  visible_world_action.rs
crates/appearance-world/src/components/: mod.rs  model.rs  transform.rs
crates/appearance/src/: appearance.rs  lib.rs
