[workspace.package]
authors = ["Jason de Wolff <jason.dewolff@temporalinteractive.com>"]
edition = "2021"
homepage = "https://temporalinteractive.com"
license = "MIT"
publish = false
repository = "https://github.com/TemporalInteractive/appearance"
version = "0.1.0"

[workspace.dependencies]
appearance = { version = "0.1.0", path = "crates/appearance" }

appearance-asset-database = { version = "0.1.0", path = "crates/appearance-asset-database" }
appearance-build = { version = "0.1.0", path = "crates/appearance-build" }
appearance-camera = { version = "0.1.0", path = "crates/appearance-camera" }
appearance-distributed-renderer = { version = "0.1.0", path = "crates/appearance-distributed-renderer" }
appearance-input = { version = "0.1.0", path = "crates/appearance-input" }
appearance-model = { version = "0.1.0", path = "crates/appearance-model" }
# appearance-path-tracer = { version = "0.1.0", path = "crates/appearance-path-tracer" }
appearance-path-tracer-gpu = { version = "0.1.0", path = "crates/appearance-path-tracer-gpu" }
appearance-profiling = { version = "0.1.0", path = "crates/appearance-profiling", features = ["superluminal"] }
appearance-render-loop = { version = "0.1.0", path = "crates/appearance-render-loop" }
appearance-texture = { version = "0.1.0", path = "crates/appearance-texture" }
appearance-time = { version = "0.1.0", path = "crates/appearance-time" }
appearance-transform = { version = "0.1.0", path = "crates/appearance-transform" }
appearance-wgpu = { version = "0.1.0", path = "crates/appearance-wgpu" }
appearance-world = { version = "0.1.0", path = "crates/appearance-world" }

anyhow = { version = "1.0.94", default-features = false, features = ["std"] }
appearance-color-spaces = { git = "https://github.com/TemporalInteractive/appearance-color-spaces.git", rev = "070cd7d", default-features = false, features = ["aces", "dci_p3", "rec2020", "srgb"] }
bitflags = {version = "2.8.0", default-features = true }
bytemuck = { version = "1.13", default-features = false, features = ["derive", "extern_crate_alloc", "min_const_generics"] }
clap = { version = "4.5.27", default-features = true, features = ["derive"] }
# egui = { version = "0.30.0", default-features = true, features = ["bytemuck"] }
# egui_extras = { version = "0.30.0", default-features = true }
# egui_plot = { version = "0.30.0", default-features = false }
# egui-winit = { version = "0.30.0", default-features = false, features = ["webbrowser"] }
env_logger = { version = "0.11.5", default-features = false }
futures = { version = "0.3.30", default-features = false, features = ["executor"] }
glam = { version = "0.29.2", default-features = false, features = ["std", "bytemuck"] }
gltf = { version = "1.0.0", default-features = true, features = ["KHR_materials_emissive_strength", "KHR_materials_ior", "KHR_materials_transmission"] }
hassle-rs = { version = "0.11.0", default-features = false }
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg", "bmp"] }
log = { version = "0.4.20", default-features = false }
murmurhash3 = { version = "0.0.5", default-features = false }
num = { version = "0.4.3", default-features = false, features = ["std"] }
parking_lot = { version = "0.12.3", default-features = false }
puffin = { version = "0.19.0", default-features = false, features = ["web"] }
# puffin_egui = { git = "https://github.com/TemporalInteractive/puffin.git", default-features = true }
rayon = { version = "1.8.1", default-features = false }
specs = { version = "0.20.0", default-features = false, features = ["parallel"] }
superluminal-perf = { version = "0.3.0", default-features = false }
tinybvh = { git = "https://github.com/TemporalInteractive/tinybvh.git", rev = "889dadf", default-features = false, features = ["simd", "unsafe-send-sync"] }
# tinybvh = { path = "../tinybvh", default-features = false, features = ["simd", "unsafe-send-sync"] }
turbojpeg = { version = "1.2.1", default-features = true }
unreliable = { git = "https://github.com/TemporalInteractive/unreliable.git", rev = "b44e153", default-features = false }
# unreliable = { path = "../unreliable/unreliable", default-features = false }
uuid = { version = "1.12.1", default-features = false, features = ["std", "v4", "bytemuck"]}
winit = { version = "0.30.5", default-features = false, features = ["rwh_06"] }
wgpu = { version = "24.0.1", default-features = false, features = ["wgsl", "spirv"] }
xshell = { version = "0.2.7", default-features = true }

[profile.dev.package.bytemuck]
opt-level = 3
[profile.dev.package.glam]
opt-level = 3
[profile.dev.package.gltf]
opt-level = 3
[profile.dev.package.tinybvh]
opt-level = 3
debug-assertions = false
debug = false
[profile.dev.package.appearance-color-spaces]
opt-level = 3

[workspace]
members = [
    "apps/render-node",
    "apps/render-host",
    "crates/appearance-asset-database",
    "crates/appearance-build",
    "crates/appearance-camera",
    "crates/appearance-distributed-renderer",
    "crates/appearance-input",
    "crates/appearance-model",
#    "crates/appearance-path-tracer",
    "crates/appearance-path-tracer-gpu",
    "crates/appearance-profiling",
    "crates/appearance-render-loop",
    "crates/appearance-texture",
    "crates/appearance-time",
    "crates/appearance-transform",
    "crates/appearance-wgpu",
    "crates/appearance-world",
]
resolver = "2"