[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "render-node"
publish.workspace = true
version = "0.1.0"

[dependencies]
appearance.workspace = true

anyhow.workspace = true
bytemuck.workspace = true
clap.workspace = true
futures.workspace = true
glam.workspace = true
log.workspace = true
rayon.workspace = true
tinybvh.workspace = true
uuid.workspace = true

[build-dependencies]
appearance-build.workspace = true