[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "appearance-camera"
publish.workspace = true
version = "0.1.0"

[dependencies]
appearance-input.workspace = true
appearance-profiling.workspace = true
appearance-transform.workspace = true

glam.workspace = true
winit.workspace = true