[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "appearance-path-tracer-gpu"
publish.workspace = true
version = "0.1.0"

[dependencies]
appearance-asset-database.workspace = true
appearance-camera.workspace = true
appearance-model.workspace = true
appearance-profiling.workspace = true
appearance-render-loop.workspace = true
appearance-texture.workspace = true
appearance-transform.workspace = true
appearance-wgpu.workspace = true
appearance-world.workspace = true

bytemuck.workspace = true
glam.workspace = true
log.workspace = true
uuid.workspace = true