[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "appearance-path-tracer"
publish.workspace = true
version = "0.1.0"

[dependencies]
appearance-asset-database.workspace = true
appearance-camera.workspace = true
appearance-model.workspace = true
appearance-profiling.workspace = true
appearance-render-loop.workspace = true
appearance-texture.workspace = true
appearance-transform.workspace = true
appearance-world.workspace = true

bitflags.workspace = true
bytemuck.workspace = true
glam.workspace = true
murmurhash3.workspace = true
num.workspace = true
log.workspace = true
rayon.workspace = true
tinybvh.workspace = true
uuid.workspace = true

[build-dependencies]
appearance-color-spaces.workspace = true