[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "appearance-render-loop"
publish.workspace = true
version = "0.1.0"

[dependencies]
appearance-time.workspace = true
appearance-wgpu.workspace = true

anyhow.workspace = true
bytemuck.workspace = true
futures.workspace = true
log.workspace = true
winit.workspace = true
