[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "appearance-render-loop"
publish.workspace = true
version = "0.1.0"

[dependencies]
appearance-profiling.workspace = true
appearance-time.workspace = true
appearance-wgpu.workspace = true
appearance-world.workspace = true

anyhow.workspace = true
bytemuck.workspace = true
futures.workspace = true
glam.workspace = true
log.workspace = true
rayon.workspace = true
turbojpeg.workspace = true
unreliable.workspace = true
winit.workspace = true

crossbeam = "0.8.4"