[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "appearance-texture"
publish.workspace = true
version = "0.1.0"

[dependencies]
appearance-asset-database.workspace = true
appearance-profiling.workspace = true

anyhow.workspace = true
glam.workspace = true
image.workspace = true
log.workspace = true
uuid.workspace = true
wgpu.workspace = true