[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "appearance-wgpu"
publish.workspace = true
version = "0.1.0"

[dependencies]
appearance-profiling.workspace = true

anyhow.workspace = true
bytemuck.workspace = true
log.workspace = true
wgpu.workspace = true
winit.workspace = true