[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "appearance-world"
publish.workspace = true
version = "0.1.0"

[dependencies]
appearance-camera.workspace = true
appearance-transform.workspace = true

bytemuck.workspace = true
glam.workspace = true